# tenki

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: AGENT.md  design.md  product.md  tech.md
src/: config.rs  location.rs  main.rs  model.rs  units.rs  weather.rs
src/art/: colors.rs  mod.rs  pieces.rs
src/render/: card.rs  chart.rs  compact.rs  fullscreen.rs  mod.rs  oneline.rs  scene.rs
src/theme/: default.rs  forest.rs  light.rs  mod.rs  mono.rs  ocean.rs  sunset.rs
